
#
#  Copyright (C) 1994-2016 Altair Engineering, Inc.
#  For more information, contact Altair at www.altair.com.
#   
#  This file is part of the PBS Professional ("PBS Pro") software.
#  
#  Open Source License Information:
#   
#  PBS Pro is free software. You can redistribute it and/or modify it under the
#  terms of the GNU Affero General Public License as published by the Free 
#  Software Foundation, either version 3 of the License, or (at your option) any 
#  later version.
#   
#  PBS Pro is distributed in the hope that it will be useful, but WITHOUT ANY 
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
#  PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
#   
#  You should have received a copy of the GNU Affero General Public License along 
#  with this program.  If not, see <http://www.gnu.org/licenses/>.
#   
#  Commercial License Information: 
#  
#  The PBS Pro software is licensed under the terms of the GNU Affero General 
#  Public License agreement ("AGPL"), except where a separate commercial license 
#  agreement for PBS Pro version 14 or later has been executed in writing with Altair.
#   
#  Altair’s dual-license business model allows companies, individuals, and 
#  organizations to create proprietary derivative works of PBS Pro and distribute 
#  them - whether embedded or bundled with other software - under a commercial 
#  license agreement.
#  
#  Use of Altair’s trademarks, including but not limited to "PBS™", 
#  "PBS Professional®", and "PBS Pro™" and Altair’s logos is subject to Altair's 
#  trademark licensing policies.
#

lib_LIBRARIES = libattr.a

libattr_a_CPPFLAGS = -I$(top_srcdir)/src/include

libattr_a_SOURCES = \
	attr_atomic.c \
	attr_fn_acl.c \
	attr_fn_arst.c \
	attr_fn_b.c \
	attr_fn_c.c \
	attr_fn_entlim.c \
	attr_fn_f.c \
	attr_fn_hold.c \
	attr_fn_intr.c \
	attr_fn_l.c \
	attr_fn_ll.c \
	attr_fn_resc.c \
	attr_fn_size.c \
	attr_fn_str.c \
	attr_fn_time.c \
	attr_fn_unkn.c \
	attr_func.c \
	attr_node_func.c \
	attr_resc_func.c \
	Long_.c \
	LTostr.c \
	resc_map.c \
	strToL.c \
	strTouL.c \
	uLTostr.c

